[tool.poetry]
name = "association_rules"
version = "0.1.0"
description = "Sorts association rules module"
authors = ["Product Team <development@fluidattacks.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mlxtend = "^0.19.0"
pandas = "^1.1.2"
psycopg2 = "^2.8.4"

[tool.poetry.scripts]
association-rules = 'association_rules:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
