[project]
name = "asm_dal"
authors = [
    {name = "Product Team", email = "development@fluidattacks.com"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.8"
dependencies = [
    "boto3 >=1.17.104, <2.0.0",
    "click >=8.1.3, <9.0.0",
    "fa-purity >=1.33.2, <2.0.0",
    "mypy-boto3-dynamodb >=1.23.0, <2.0.0",
    "types-boto3 >=1.0.2, <2.0.0",
    "utils-logger-2 >=1.0.0, <2.0.0",
]
description = "ASM Synchronous Data Access Layer"
dynamic = ["version"]

[project.scripts]
asm-dal = "asm_dal.cli:main"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
