[project]
name = "paginator"
authors = [
    {name = "Product Team", email = "development@fluidattacks.com"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.10"
dependencies = [
    "aioextensions >=20.11.1621472, <21.0.0",
    "Deprecated >=1.2.12, <2.0.0",
    "requests >=2.25.1, <3.0.0",
    "returns >=0.16.0, <1.0.0",
    "ratelimit >=2.2.1, <3.0.0",
    "pathos >=0.2.8, <1.0.0",
    "six >=1.16.0, <2.0.0",
    "purity >=1.0.0, <2.0.0",
]
description = "legacy lib paginator"
dynamic = ["version"]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
