[tool.poetry]
name = "purity"
version = "1.0.0"
description = "legacy lib purity"
authors = ["Product Team <development@fluidattacks.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Deprecated = "^1.2.12"
more-itertools = "^8.10.0"
returns = ">=0.16.0 <1.0.0"
fa-purity = "^1.1.2"
simplejson = "^3.17.6"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
