[project]
name = "code_etl"
authors = [
    {name = "Product Team", email = "development@fluidattacks.com"},
]
requires-python = ">=3.10"
dependencies = [
    "click >=8.1.3, <9.0.0",
    "fa_purity >=1.27.0, <2.0.0",
    "GitPython >=3.1.14, <4.0.0",
    "gql >=3.1.0, <4.0.0",
    "pathos >=0.2.8, <1.0.0",
    "redshift-client >=1.2.0, <2.0.0",
    "requests >=2.25.1, <3.0.0",
    "types-requests >=2.27.16, <3.0.0",
    "utils-logger-2 >=1.0.0, <2.0.0",
]
description = "Code ETL"
dynamic = ["version"]

[project.scripts]
observes-etl-code = 'code_etl.cli:main'

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
