[project]
name = "dynamo_etl_conf"
description = "Dynamo ETLs configuration"
dynamic = ["version"]
authors = [
    {name = "Product Team", email = "development@fluidattacks.com"},
]

requires-python = ">=3.10"
dependencies = [
    "fa-purity >=1.22.1, <2.0.0",
    "redshift-client >=1.1.1, <2.0.0",
    "click >=8.1.3, <9.0.0",
]

[project.scripts]
dynamo-etl = "dynamo_etl_conf.cli:main"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
