[project]
name = "tap_bugsnag"
authors = [
    {name = "Product Team", email = "development@fluidattacks.com"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.8"
dependencies = [
    "click >=8.1.3, <9.0.0",
    "requests >=2.28.1, <3.0.0",
    "types-requests >=2.28.9, <3.0.0",
    "paginator>=1.0.0, <2.0.0",
    "singer-io>=1.0.0, <2.0.0",
    "utils-logger >=1.0.0, <2.0.0",
]
description = "Singer tap bugsnag"
dynamic = ["version"]

[project.scripts]
tap-bugsnag = "tap_bugsnag.cli:main"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
