[project]
name = "tap_checkly"
authors = [
    {name = "Product Team", email = "development@fluidattacks.com"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.8"
dependencies = [
    "python-dateutil >=2.8.2, <3.0.0",
    "click >=8.1.2, <9.0.0",
    "requests >=2.25.1, <3.0.0",
    "fa-purity >=1.33.2, <2.0.0",
    "fa-singer-io >=1.6.2, <2.0.0",
    "types-requests >=2.27.20, <3.0.0",
    "types-python-dateutil >=2.8.12, <3.0.0",
]
description = "tap checkly - data extractor"
dynamic = ["version"]

[project.scripts]
tap-checkly = "tap_checkly.cli:main"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
