[project]
name = "tap_csv"
authors = [
    {name = "Product Team", email = "development@fluidattacks.com"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.8"
dependencies = [
    "click >=8.1.3, <9.0.0",
    "fa-purity >=1.37.0, <2.0.0",
    "fa-singer-io >=1.6.2, <2.0.0",
    "utils-logger-2 >=1.0.0, <2.0.0",
]
description = "Singer tap csv"
dynamic = ["version"]

[project.scripts]
tap-csv = "tap_csv.cli:main"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
