[project]
name = "tap_dynamo"
authors = [
    {name = "Product Team", email = "development@fluidattacks.com"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.8"
dependencies = [
    "boto3 >=1.20.16, <2.0.0",
    "click >=^8.0.3, <9.0.0",
    "pathos >=0.3.0, <0.4.0",
    "simplejson >=3.17.6, <4.0.0",
    "fa-purity >=1.31.0 , <2.0.0",
    "fa-singer-io >=1.1.0, <2.0.0",
    "mypy-boto3-dynamodb >=1.20.49, <2.0.0",
    "types-boto3 >=1.0.2, <2.0.0",
    "types-click >=7.1.8, <8.0.0",
    "utils-logger-2 >=1.0.0, <2.0.0",
]
description = "DynamoDB Singer Tap"
dynamic = ["version"]

[project.scripts]
tap-dynamo = "tap_dynamo.cli:main"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
