[project]
name = "tap_json"
authors = [
    {name = "Product Team", email = "development@fluidattacks.com"},
]
requires-python = ">=3.10"
dependencies = [
    "click >=8.0.1, <9.0.0",
    "fa_singer_io >=1.7.0, <2.0.0",
    "fa_purity >=1.34.0, <2.0.0",
    "dateutils >=0.6.12, <1.0.0",
    "pathos >=0.3.0, <0.4.0",
    "types-python-dateutil >=2.8.19.4, <3.0.0",
]
description = "tap for determining schema from records"
dynamic = ["version"]

[project.scripts]
tap-json = 'tap_json.cli:main'

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
