[project]
name = "tap_mandrill"
authors = [
    {name = "Product Team", email = "development@fluidattacks.com"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.10"
dependencies = [
    "click >=8.1.3, <9.0.0",
    "fa-purity >=1.33.2 , <2.0.0",
    "fa-singer-io >=1.6.2, <2.0.0",
    "mailchimp-transactional >=1.0.47, <2.0.0",
    "python-dateutil >=2.8.2, <3.0.0",
    "requests >=2.28.1, <3.0.0",
    "types-python-dateutil >=2.8.16, <3.0.0",
    "types-requests >=2.28.9, <3.0.0",
    "utils-logger-2 >=1.0.0, <2.0.0",
]
description = "Singer target redshift"
dynamic = ["version"]

[project.scripts]
tap-mandrill = "tap_mandrill.cli:main"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
