[project]
name = "tap_mixpanel"
authors = [
    {name = "Product Team", email = "development@fluidattacks.com"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.8"
dependencies = [
    "boto3 >=1.17.20, <2.0.0",
    "botocore >=1.20.20, <2.0.0",
    "numpy >=1.22.1, <2.0.0",
    "pandas >=1.2.4, <2.0.0",
    "requests >=2.25.1, <3.0.0"
]
description = "tap mixpanel - data extractor"
dynamic = ["version"]

[project.scripts]
tap-mixpanel = "tap_mixpanel.core:main"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
