[project]
name = "tap_zoho_crm"
authors = [
    {name = "Product Team", email = "development@fluidattacks.com"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.8"
dependencies = [
    "click >=8.1.3, <9.0.0",
    "fa-purity >=1.37.0, <2.0.0",
    "fa-singer-io >=1.6.2, <2.0.0",
    "pure-requests >=0.1.0, <0.2.0",
    "redshift-client >=3.0.0, <4.0.0",
    "requests >=2.28.2, <3.0.0",
    "types-requests >=2.28.11.15, <3.0.0",
    "utils-logger-2 >=1.0.0, <2.0.0",
]
description = "Singer tap zoho crm"
dynamic = ["version"]

[project.scripts]
tap-zoho-crm = "tap_zoho_crm._cli:main"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
