[project]
name = "target_s3"
authors = [
    {name = "Product Team", email = "development@fluidattacks.com"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.10"
dependencies = [
    "boto3 >=1.17.104, <2.0.0",
    "click >=8.1.3, <9.0.0",
    "fa-purity >=1.33.0 , <2.0.0",
    "fa-singer-io >=1.6.2, <2.0.0",
    "pathos >=0.2.8, <0.4.0",
    "python-dateutil >=2.8.2, <3.0.0",
    "mypy-boto3-s3 >=1.23.0, <2.0.0",
    "types-boto3 >=1.0.2, <2.0.0",
    "types-python-dateutil >=2.8.16, <3.0.0",
    "utils-logger-2 >=1.0.0, <2.0.0",
]
description = "Singer target redshift"
dynamic = ["version"]

[project.scripts]
target-s3 = "target_s3._cli:main"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
