[tool.poetry]
name = "postgres_client"
version = "1.0.0"
description = "Legacy postgres client"
authors = ["Product Team <development@fluidattacks.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Deprecated = "^1.2.12"
psycopg2 = "^2.8.6"
returns = "^0.19.0"
utils-logger = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
